--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '5.3.2'
+version = '0.1.2'
 group = 'com.minecraftcomesalive.mca' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'mca'
 
@@ -42,7 +42,7 @@ minecraft {
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
-            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
             // You can set various levels here.
@@ -50,7 +50,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                mca {
                     source sourceSets.main
                 }
             }
@@ -64,7 +64,7 @@ minecraft {
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
-            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
             // You can set various levels here.
@@ -86,7 +86,7 @@ minecraft {
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
             // "REGISTRYDUMP": For getting the contents of all registries.
-            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             // Recommended logging level for the console
             // You can set various levels here.
@@ -94,7 +94,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'mca', '--all',
+                    '--output', file('src/generated/resources/'),
+                    '--existing', file('src/generated/resources/').toString(),
+                    '--existing', file('src/main/resources/').toString()
 
             mods {
                 mca {
@@ -140,7 +143,7 @@ jar {
         attributes([
             "Specification-Title": "mca",
             "Specification-Vendor": "examplemodsareus",
-            "Specification-Version": "5.3.2", // We are version 1 of ourselves
+            "Specification-Version": "0.1.2", // We are version 1 of ourselves
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"examplemodsareus",
