fix texture loader

--- a/build.gradle
+++ b/build.gradle
@@ -95,9 +95,9 @@ minecraft {
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
             args '--mod', 'mca', '--all',
-                    '--output', file('src/generated/resources/'),
+                    '--existing', file('src/main/resources/').toString(),
                     '--existing', file('src/generated/resources/').toString(),
-                    '--existing', file('src/main/resources/').toString()
+                    '--output', file('src/generated/resources/')
 
             mods {
                 mca {
