--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,38 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+group = com.minecraftcomesalive
+archivesBaseName = MinecraftComesAlive
+mod_id = mca
+repoName = minecraft-comes-alive
+name = Minecraft Comes Alive
+description = Minecraft Comes Alive
+vcsUrl = https://github.com/Yuki-Ryu/minecraft-comes-alive.git
+changelogUrl = https://github.com/Yuki-Ryu/minecraft-comes-alive/blob/1.16.5/CHANGELOG.md
+
+# Version number to give the mod when building, if it cannot be read from Git tags
+build_version = 0.0.0
+
+MAPPING_CHANNEL = ('official')
+MAPPING_VERSION = ('1.16.5')
+VERSIONS = subprojects.collect{it.name}.sort{ a,b -> MinecraftVersion.from(a).compareTo(MinecraftVersion.from(b)) } as List
+NULL_OUPUT = new OutputStream() { public void write(int b){} }
+TIMESTAMP = (new Date()).format('yyyyMMdd.HHmmss')
+PATH_BUILD = file('build').absolutePath
+mc_version = 1.16.5
+sl_version = 1.16.3-4.+
+sgear_version = 1.16.3-2.+
+tbags_version = 1.16.3-1.+
+jei_version = 1.16.3:7.+
+hwyla_version = 1.+
+curios_version = 1.16.3-4.+
+#world_stripper_version = 1.16.3-1.7.2
+
+forge_version = 1.16.5-34.1.4
+mcp_channel = snapshot
+mcp_mappings = 20201028-1.16.3
+
+cf_project_id = 220311
+cf_release_type = release
+cf_changelog_filename = CHANGELOG.md
