--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+def buildNumber = 1
+
 buildscript {
     repositories {
 		mavenLocal()
@@ -15,13 +17,11 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
 
-version = '1.1.1'
-group = 'com.minecraftcomesalive.mca' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+version = '2.1' + "." + buildNumber
+group = 'com.minecraftcomesalive.mca'
 archivesBaseName = 'mca'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
-//sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-
 
 javadoc {
     failOnError = false
@@ -41,6 +41,17 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+    def Properties versionProps = new Properties()
+    def versionPropsFile = file('version.properties')
+
+    versionProps.load(new FileInputStream(versionPropsFile))
+
+    def code = versionProps['BUILD_NUMBER'].toInteger() + 1
+    buildNumber = code
+
+    versionProps['BUILD_NUMBER']=code.toString()
+    versionProps.store(versionPropsFile.newWriter(), null)
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
@@ -134,7 +145,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.5-36.1.4'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.1.16'
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
